[chi/crud-gorm] Add searching to chi/crud-gorm
