# chi/crud-gorm/docs/swagger.yaml
@@ -116,4 +116,31 @@ paths:
       summary: Get an article
       tags:
       - articles
+  /articles/search:
+    get:
+      parameters:
+      - description: search by title
+        in: query
+        name: title
+        type: string
+      - description: search by content
+        in: query
+        name: content
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Article'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrResponse'
+      summary: Search articles
+      tags:
+      - articles
 swagger: "2.0"
